<resources>
    <string name="app_name">MEMORIALizarraldeLacunza</string>
    <string name="titulo">MEMORIA</string>
    <string name="caballo">caballo</string>
    <string name="matra">matra</string>
    <string name="montura">montura</string>
    <string name="monturin">monturin</string>
    <string name="cinchon_de_volteo">cinchón de volteo</string>
    <string name="cabezada">cabezada</string>
    <string name="dificultad_inicial">inicial</string>
    <string name="dificultad_media">medio</string>
    <string name="dificultad_avanzada">avanzado</string>
    <string name="dificultad_experto">experto</string>
    <string name="bozal">bozal</string>
    <string name="riendas">riendas</string>
    <string name="cascos">cascos</string>
    <string name="casco">casco</string>
    <string name="arreador">arreador</string>
    <string name="fusta">fusta</string>
    <string name="cuerda">cuerda</string>
    <string name="cepillo">cepillo</string>
    <string name="rasqueta">rasqueta</string>
    <string name="escarba_vasos">escarba vasos</string>
    <string name="palos">palos</string>
    <string name="pasto">pasto</string>
    <string name="zanahoria">zanahoria</string>
    <string name="pelota">pelota</string>
    <string name="aros">aros</string>
    <string name="orejas">orejas</string>
    <string name="crines">crines</string>
    <string name="cola">cola</string>
    <string name="ojos">ojos</string>
    <string name="jugar">jugar</string>
    <string name="configuracion">configuración</string>
    <string name="seguir_jugando">seguir jugando</string>
    <string name="volver_inicio">ir a inicio</string>
    <string name="ganaste">felicidades ganaste</string>
    <string name="subir_dificultad">aumentar la dificultad</string>
    <string name="volver_jugar">volver a jugar</string>
    <string name="grupo_tiempo">Tiempo</string>
    <string name="grupo_nivel">Nivel</string>
    <string name="grupo_voz">Voz</string>
    <string name="grupo_seleccion_imagenes">Selección de imágenes</string>
    <string name="boton_guardar">Guardar cambios</string>
    <string name="title_activity_ads">ADSActivity</string>
    <string name="title_activity_asdfg">ASDFGActivity</string>
    <string name="nivel">Nivel</string>
    <string name="mensaje_sin_elementos_seleccionados">No hay elementos seleccionados</string>
    <string name="creditos_desarrolladores">Esta aplicación fue hecha para el CEDICA en la materia Laboratorio de Software (2017) - Informática - UNLP, por los alumnos Agustín Lizarralde y Paula Salamone Lacunza</string>
</resources>
