<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    android:weightSum="1">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:layout_weight="0.25">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ganaste"
                android:id="@+id/ganaste" />

            <Button
                android:id="@+id/boton_volver_jugar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/volver_jugar" />

            <Button
                android:id="@+id/boton_subir_dificultad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/subir_dificultad"
                android:visibility="gone" />

            <Button
                android:id="@+id/boton_menu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/volver_inicio" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>