<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.laboratoriosoftware2016.memorializarraldelacunza.activities.ActivityInicio"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:id="@+id/titulo_container">

        <com.lb.auto_fit_textview.AutoResizeTextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_titulo"
            android:layout_weight="0.21"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="200sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/cedica_logo"
        android:id="@+id/imageView"
        android:layout_weight="25"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="35">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7">

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:id="@+id/opciones_container"
            android:gravity="center_vertical"
            android:weightSum="10">

            <Button
                android:text="@string/jugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_jugar"
                android:layout_weight="5" />

            <Button
                android:text="@string/configuracion"
                android:id="@+id/button_configurar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="5" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7">

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
